syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.niit.grpcapp.proto";
option java_outer_classname = "MessageProto";

service SimpleMessage {
  rpc SendMessage (MessageRequest) returns (MessageReply) {}
  rpc StreamMessage (MessageRequest) returns (stream MessageReply) {}
}

message MessageRequest {
  string name = 1;
}

message MessageReply {
  string message = 1;
}
